Fix issue with selected result layers on mobile

--- a/public/stylesheets/results.scss
+++ b/public/stylesheets/results.scss
@@ -403,6 +403,7 @@
     height: auto;
     display: block;
     border-left: none;
+    z-index: 9997;
     border-bottom: 2px solid $secondary;
     position: absolute;
     bottom: 0;
@@ -439,7 +440,6 @@
 
   .result.selected {
     width: 100%;
-    z-iindex: 99999;
     top: 0;
     display: block;
     background-color: $lightest;
